--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "starks/starks",
-  "description": "Starks Fitness Website",
+  "name": "spinhalf-com/starks",
+  "description": "Starks Fitness Website 5.1 demo",
   "type": "project",
   "authors": [
     {
